samples/_failures_safe/1761414989_25bce5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a457de68.c: In function ‘prim’:
./samples/SAFE/__tmp_a457de68.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
